--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,15 @@ Description: Methods for matrix factorization based on "Empirical
 Depends: R (>= 3.4)
 Imports:
     Matrix
+Suggests:
+    ebnm (>= 0.1-17),
+    ashr (>= 2.2-4),
+    mixsqp (>= 0.1.92),
+    testthat,
+    knitr,
+    rmarkdown
 License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
+VignetteBuilder: knitr
