--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,8 @@ Description: Methods for matrix factorization based on "Empirical
     <https://arxiv.org/abs/1802.06931>).
 Depends: R (>= 3.4)
 Imports:
-    Matrix
+    Matrix,
+    Rcpp
 Suggests:
     ebnm (>= 0.1-17),
     ashr (>= 2.2-27),
@@ -22,4 +23,5 @@ License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
+LinkingTo: Rcpp
 VignetteBuilder: knitr
