Update fixed factors interface (following Matthew's suggestions). Update docs and tests.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,15 @@ S3method(fitted,flash)
 export(ebnm.ash)
 export(ebnm.pn)
 export(fixed.factors)
+export(fixed.ones)
+export(fixed.sparse)
 export(flashier)
 export(nonnegative)
 export(nonpositive)
 export(nonzero.mode)
 export(normal)
 export(normal.mix)
-export(ones.factor)
 export(point.laplace)
 export(point.normal)
 export(set.flash.data)
-export(sparse.factors)
 export(uniform.mix)
