Change prior.type to prior.class. Prefix all prior classes with prior (following Matthew's suggestion).

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,12 +7,12 @@ export(fixed.factors)
 export(fixed.ones)
 export(fixed.sparse)
 export(flashier)
-export(nonnegative)
-export(nonpositive)
-export(nonzero.mode)
-export(normal)
-export(normal.mix)
-export(point.laplace)
-export(point.normal)
+export(prior.nonnegative)
+export(prior.nonpositive)
+export(prior.nonzero.mode)
+export(prior.normal)
+export(prior.normal.mix)
+export(prior.point.laplace)
+export(prior.point.normal)
+export(prior.uniform.mix)
 export(set.flash.data)
-export(uniform.mix)
