--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,6 @@ S3method(fitted,flash)
 S3method(print,flash)
 export(as.prior)
 export(ebnm.ash)
-export(ebnm.pn)
 export(fixed.factors)
 export(fixed.ones)
 export(fixed.sparse)
@@ -18,3 +17,4 @@ export(prior.point.laplace)
 export(prior.point.normal)
 export(prior.uniform.mix)
 export(set.flash.data)
+importFrom(ebnm,ebnm)
