Update to use new ebnm interface.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,9 +11,9 @@ export(prior.nonnegative)
 export(prior.nonpositive)
 export(prior.nonzero.mode)
 export(prior.normal)
-export(prior.normal.mix)
+export(prior.normal.scale.mix)
 export(prior.point.laplace)
 export(prior.point.normal)
-export(prior.uniform.mix)
+export(prior.unimodal)
 export(set.flash.data)
 importFrom(ebnm,ebnm)
