Add symmetric unimodal prior. Get vignettes working.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(prior.normal.scale.mix)
 export(prior.point.laplace)
 export(prior.point.normal)
 export(prior.unimodal)
+export(prior.unimodal.symmetric)
 export(set.flash.data)
 importFrom(ebnm,ebnm)
