--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,3 +18,6 @@ export(prior.unimodal)
 export(prior.unimodal.symmetric)
 export(set.flash.data)
 importFrom(ebnm,ebnm)
+importFrom(parallel,makeCluster)
+importFrom(parallel,parLapply)
+importFrom(parallel,stopCluster)
