Run devtools::document()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(fixed.factors)
 export(fixed.ones)
 export(fixed.sparse)
 export(flashier)
+export(init.fn.softImpute)
 export(prior.nonnegative)
 export(prior.nonpositive)
 export(prior.nonzero.mode)
@@ -16,6 +17,7 @@ export(prior.point.laplace)
 export(prior.point.normal)
 export(prior.unimodal)
 export(prior.unimodal.symmetric)
+export(remove.factors)
 export(set.flash.data)
 importFrom(ebnm,ebnm)
 importFrom(parallel,makeCluster)
