Fix up tests and run devtools::document()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,17 @@
 S3method(fitted,flash)
 S3method(print,flash)
 export(as.prior)
-export(fixed.factors)
-export(fixed.ones)
-export(fixed.sparse)
-export(flashier)
+export(flash)
+export(flash.add.greedy)
+export(flash.backfit)
+export(flash.fix.loadings)
+export(flash.init)
+export(flash.init.factors)
+export(flash.nullcheck)
+export(flash.remove.factors)
+export(flash.set.factors.to.zero)
+export(flash.set.verbose)
+export(init.fn.default)
 export(init.fn.softImpute)
 export(prior.nonnegative)
 export(prior.nonpositive)
@@ -17,8 +24,6 @@ export(prior.point.laplace)
 export(prior.point.normal)
 export(prior.unimodal)
 export(prior.unimodal.symmetric)
-export(remove.factors)
-export(set.flash.data)
 importFrom(ebnm,ebnm)
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
