Document the main flash function to death. Die!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(prior.point.normal)
 export(prior.unimodal)
 export(prior.unimodal.symmetric)
 importFrom(ebnm,ebnm)
+importFrom(magrittr,"%>%")
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
