Fixing imports and roxygen2 docs errors.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,14 +7,16 @@ Author: Jason Willwerscheid
 Maintainer: Jason Willwerscheid <willwerscheid@github.com>
 Description: Methods for matrix factorization based on "Empirical
     Bayes Matrix Factorization" (W. Wang & M. Stephens, 2018,
-    <https://arxiv.org/abs/1802.06931>).
+    <arXiv:1802.06931>).
 Depends: R (>= 3.4)
 Remotes: stephenslab/ebnm
 Imports:
+    utils,
     Matrix,
     ebnm (>= 0.1-21),
     parallel,
-    magrittr
+    magrittr,
+    softImpute
 Suggests:
     testthat,
     knitr,
