--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,3 +29,8 @@ importFrom(magrittr,"%>%")
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
+importFrom(softImpute,softImpute)
+importFrom(stats,optimize)
+importFrom(stats,pnorm)
+importFrom(stats,rnorm)
+importFrom(utils,modifyList)
