--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: flashier
 Type: Package
 Date: 2021-01-18
-Title: Empirical Bayes Matrix and Tensor Factorization
+Title: Empirical Bayes Matrix (and Tensor) Factorization
 Version: 0.2.9
 Author: Jason Willwerscheid
 Maintainer: Jason Willwerscheid <willwerscheid@github.com>
 Description: Methods for matrix factorization based on "Empirical
-    Bayes Matrix Factorization" (W. Wang & M. Stephens, 2018,
-    <https://arxiv.org/abs/1802.06931>).
-Depends: R (>= 3.4)
-Remotes: stephenslab/ebnm
+    Bayes Matrix Factorization" (W. Wang & M. Stephens, 2021).
+Depends: 
+    R (>= 3.4)
+Remotes: 
+    stephenslab/ebnm
 Imports:
     Matrix,
     ebnm (>= 0.1-21),
