Change prior.family parameter to ebnm.fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(fitted,flash)
 S3method(print,flash)
-export(as.prior)
+export(as.ebnm.fn)
 export(flash)
 export(flash.add.greedy)
 export(flash.backfit)
@@ -15,16 +15,8 @@ export(flash.set.factors.to.zero)
 export(flash.set.verbose)
 export(init.fn.default)
 export(init.fn.softImpute)
-export(prior.nonnegative)
-export(prior.nonpositive)
-export(prior.nonzero.mode)
-export(prior.normal)
-export(prior.normal.scale.mix)
-export(prior.point.laplace)
-export(prior.point.normal)
-export(prior.unimodal)
-export(prior.unimodal.symmetric)
 importFrom(ebnm,ebnm)
+importFrom(ebnm,ebnm_point_normal)
 importFrom(magrittr,"%>%")
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
