Change terminology in return object field names for matrices. First go at a "ldf" method for flash objects.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@
 
 S3method(fitted,flash)
 S3method(fitted,flash.fit)
+S3method(ldf,flash)
+S3method(ldf,flash.fit)
 S3method(print,flash)
 export(as.ebnm.fn)
 export(flash)
@@ -17,6 +19,7 @@ export(flash.set.verbose)
 export(init.fn.default)
 export(init.fn.irlba)
 export(init.fn.softImpute)
+export(ldf)
 importFrom(ebnm,ebnm)
 importFrom(ebnm,ebnm_point_normal)
 importFrom(irlba,irlba)
