--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,8 @@ S3method(fitted,flash.fit)
 S3method(ldf,flash)
 S3method(ldf,flash.fit)
 S3method(print,flash)
+S3method(residuals,flash)
+S3method(residuals,flash.fit)
 export(as.ebnm.fn)
 export(flash)
 export(flash.add.greedy)
