--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,20 +2,20 @@ Package: flashier
 Type: Package
 Date: 2021-01-25
 Title: Empirical Bayes Matrix (and Tensor) Factorization
-Version: 0.2.12
+Version: 0.2.13
 Author: Jason Willwerscheid
 Maintainer: Jason Willwerscheid <willwerscheid@github.com>
 Description: Methods for matrix factorization based on "Empirical
     Bayes Matrix Factorization" (W. Wang & M. Stephens, 2021).
 Depends: 
-    R (>= 3.4)
+    R (>= 3.4),
+    magrittr
 Remotes: 
     stephenslab/ebnm
 Imports:
     Matrix,
     ebnm (>= 0.1-21),
-    parallel,
-    magrittr
+    parallel
 Suggests:
     testthat,
     knitr,
