--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(as.ebnm.fn)
 export(flash)
 export(flash.add.greedy)
 export(flash.backfit)
+export(flash.fit)
 export(flash.fix.loadings)
 export(flash.init)
 export(flash.init.factors)
