--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: flashier
 Type: Package
-Date: 2021-01-32
-Title: Empirical Bayes Matrix (and Tensor) Factorization
-Version: 0.2.20
+Date: 2021-02-08
+Title: Empirical Bayes Matrix Factorization
+Version: 0.2.21
 Author: Jason Willwerscheid
 Maintainer: Jason Willwerscheid <willwerscheid@github.com>
 Description: Methods for matrix factorization based on "Empirical
