--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ S3method(print,flash)
 S3method(residuals,flash)
 S3method(residuals,flash.fit)
 export(as.ebnm.fn)
+export(conv.crit.elbo)
+export(conv.crit.factors)
+export(conv.crit.loadings)
 export(flash)
 export(flash.add.greedy)
 export(flash.backfit)
