update verbose docs, export display functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,11 @@ export(as.ebnm.fn)
 export(conv.crit.elbo)
 export(conv.crit.factors)
 export(conv.crit.loadings)
+export(display.elbo)
+export(display.elbo.diff)
+export(display.max.chg)
+export(display.max.chg.F)
+export(display.max.chg.L)
 export(flash)
 export(flash.add.greedy)
 export(flash.backfit)
