New flash.fit interface!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,19 @@ export(display.elbo.diff)
 export(display.max.chg)
 export(display.max.chg.F)
 export(display.max.chg.L)
+export(ff.KL)
+export(ff.R2)
+export(ff.data)
+export(ff.elbo)
+export(ff.est.tau)
+export(ff.fixed.tau)
+export(ff.fixed.var.type)
+export(ff.g)
+export(ff.nonmissing)
+export(ff.p2m)
+export(ff.pm)
+export(ff.tau)
+export(ff.var.type)
 export(flash)
 export(flash.add.greedy)
 export(flash.backfit)
