Updates to flash.set.verbose interface.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,11 +11,11 @@ export(as.ebnm.fn)
 export(conv.crit.elbo)
 export(conv.crit.factors)
 export(conv.crit.loadings)
+export(display.F.max.chg)
+export(display.L.max.chg)
 export(display.elbo)
 export(display.elbo.diff)
 export(display.max.chg)
-export(display.max.chg.F)
-export(display.max.chg.L)
 export(ff.KL)
 export(ff.R2)
 export(ff.data)
