Change name of flash.fix.loadings to flash.fix.factors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,7 +33,7 @@ export(flash)
 export(flash.add.greedy)
 export(flash.backfit)
 export(flash.fit)
-export(flash.fix.loadings)
+export(flash.fix.factors)
 export(flash.init)
 export(flash.init.factors)
 export(flash.nullcheck)
