Fixes from pcarbo's PR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,3 +47,7 @@ importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
 importFrom(softImpute,softImpute)
+importFrom(stats,optimize)
+importFrom(stats,pnorm)
+importFrom(stats,rnorm)
+importFrom(utils,modifyList)
