--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: flashier
 Type: Package
 Date: 2021-02-22
 Title: Empirical Bayes Matrix Factorization
-Version: 0.2.24
+Version: 0.2.25
 Author: Jason Willwerscheid
 Maintainer: Jason Willwerscheid <willwerscheid@github.com>
 Description: Methods for matrix factorization based on "Empirical
@@ -21,7 +21,8 @@ Imports:
 Suggests:
     testthat,
     knitr,
-    rmarkdown
+    rmarkdown,
+    NNLM
 License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
