Ad function flash.reorder.factors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(flash.init)
 export(flash.init.factors)
 export(flash.nullcheck)
 export(flash.remove.factors)
+export(flash.reorder.factors)
 export(flash.set.factors.to.zero)
 export(flash.set.verbose)
 export(init.fn.default)
