Fancy new plot method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(fitted,flash)
 S3method(fitted,flash.fit)
 S3method(ldf,flash)
 S3method(ldf,flash.fit)
+S3method(plot,flash)
 S3method(print,flash)
 S3method(residuals,flash)
 S3method(residuals,flash.fit)
@@ -40,10 +41,34 @@ export(init.fn.default)
 export(init.fn.irlba)
 export(init.fn.softImpute)
 export(ldf)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
 importFrom(ebnm,ebnm)
 importFrom(ebnm,ebnm_point_normal)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,after_stat)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_col)
+importFrom(ggplot2,geom_histogram)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_vline)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,guides)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_brewer)
+importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_fill_brewer)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_log10)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
+importFrom(grDevices,devAskNewPage)
 importFrom(irlba,irlba)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,`%>%`)
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
@@ -51,4 +76,7 @@ importFrom(softImpute,softImpute)
 importFrom(stats,optimize)
 importFrom(stats,pnorm)
 importFrom(stats,rnorm)
+importFrom(stringr,str_remove)
+importFrom(tibble,rownames_to_column)
+importFrom(tidyr,pivot_longer)
 importFrom(utils,modifyList)
