Can remove ebnm:: since ebnm is in Depends:

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(ldf)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(ebnm,ebnm)
+importFrom(ebnm,ebnm_group)
 importFrom(ebnm,ebnm_point_normal)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,after_stat)
