--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,8 +74,11 @@ importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
 importFrom(softImpute,softImpute)
+importFrom(stats,coef)
+importFrom(stats,density)
 importFrom(stats,optimize)
 importFrom(stats,pnorm)
+importFrom(stats,residuals)
 importFrom(stats,rnorm)
 importFrom(stringr,str_remove)
 importFrom(tibble,rownames_to_column)
