import stats methods used as flash methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,7 @@ importFrom(parallel,stopCluster)
 importFrom(softImpute,softImpute)
 importFrom(stats,coef)
 importFrom(stats,density)
+importFrom(stats,fitted)
 importFrom(stats,optimize)
 importFrom(stats,pnorm)
 importFrom(stats,residuals)
