Rename data, conv_crit, verbose functions. Rewrite docs. Add set_conv_crit function to mirror how flash_set_verbose works

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,14 +9,6 @@ S3method(print,flash)
 S3method(residuals,flash)
 S3method(residuals,flash.fit)
 export(as.ebnm.fn)
-export(conv.crit.elbo)
-export(conv.crit.factors)
-export(conv.crit.loadings)
-export(display.F.max.chg)
-export(display.L.max.chg)
-export(display.elbo)
-export(display.elbo.diff)
-export(display.max.chg)
 export(ff.KL)
 export(ff.elbo)
 export(ff.est.tau)
@@ -36,7 +28,16 @@ export(flash.nullcheck)
 export(flash.remove.factors)
 export(flash.reorder.factors)
 export(flash.set.factors.to.zero)
-export(flash.set.verbose)
+export(flash_conv_crit_elbo_diff)
+export(flash_conv_crit_max_chg_F)
+export(flash_conv_crit_max_chg_L)
+export(flash_set_conv_crit)
+export(flash_set_verbose)
+export(flash_verbose_elbo)
+export(flash_verbose_elbo_diff)
+export(flash_verbose_max_chg)
+export(flash_verbose_max_chg_F)
+export(flash_verbose_max_chg_L)
 export(init.fn.default)
 export(init.fn.irlba)
 export(init.fn.softImpute)
