--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(flash.remove.factors)
 export(flash.reorder.factors)
 export(flash.set.factors.to.zero)
 export(flash_conv_crit_elbo_diff)
+export(flash_conv_crit_max_chg)
 export(flash_conv_crit_max_chg_F)
 export(flash_conv_crit_max_chg_L)
 export(flash_set_conv_crit)
