updates to init.fns interface

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,9 @@ export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
 export(flash_conv_crit_max_chg_F)
 export(flash_conv_crit_max_chg_L)
+export(flash_greedy_init_default)
+export(flash_greedy_init_irlba)
+export(flash_greedy_init_softImpute)
 export(flash_set_conv_crit)
 export(flash_set_verbose)
 export(flash_verbose_elbo)
@@ -39,9 +42,6 @@ export(flash_verbose_elbo_diff)
 export(flash_verbose_max_chg)
 export(flash_verbose_max_chg_F)
 export(flash_verbose_max_chg_L)
-export(init.fn.default)
-export(init.fn.irlba)
-export(init.fn.softImpute)
 export(ldf)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
