--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,9 +25,6 @@ export(flash.fix.factors)
 export(flash.init)
 export(flash.init.factors)
 export(flash.nullcheck)
-export(flash.remove.factors)
-export(flash.reorder.factors)
-export(flash.set.factors.to.zero)
 export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
 export(flash_conv_crit_max_chg_F)
@@ -35,7 +32,10 @@ export(flash_conv_crit_max_chg_L)
 export(flash_greedy_init_default)
 export(flash_greedy_init_irlba)
 export(flash_greedy_init_softImpute)
+export(flash_remove_factors)
+export(flash_reorder_factors)
 export(flash_set_conv_crit)
+export(flash_set_factors_to_zero)
 export(flash_set_verbose)
 export(flash_verbose_elbo)
 export(flash_verbose_elbo_diff)
