--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,6 @@ export(flash.fit)
 export(flash.fix.factors)
 export(flash.init)
 export(flash.init.factors)
-export(flash.nullcheck)
 export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
 export(flash_conv_crit_max_chg_F)
@@ -32,6 +31,7 @@ export(flash_conv_crit_max_chg_L)
 export(flash_greedy_init_default)
 export(flash_greedy_init_irlba)
 export(flash_greedy_init_softImpute)
+export(flash_nullcheck)
 export(flash_remove_factors)
 export(flash_reorder_factors)
 export(flash_set_conv_crit)
