update interface and docs for flash.init

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ export(flash.add.greedy)
 export(flash.backfit)
 export(flash.fit)
 export(flash.fix.factors)
-export(flash.init)
 export(flash.init.factors)
 export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
@@ -31,6 +30,7 @@ export(flash_conv_crit_max_chg_L)
 export(flash_greedy_init_default)
 export(flash_greedy_init_irlba)
 export(flash_greedy_init_softImpute)
+export(flash_init)
 export(flash_nullcheck)
 export(flash_remove_factors)
 export(flash_reorder_factors)
