change names of flash_factors functions for consistency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,15 +27,15 @@ export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
 export(flash_conv_crit_max_chg_F)
 export(flash_conv_crit_max_chg_L)
+export(flash_factors_remove)
+export(flash_factors_reorder)
+export(flash_factors_set_to_zero)
 export(flash_greedy_init_default)
 export(flash_greedy_init_irlba)
 export(flash_greedy_init_softImpute)
 export(flash_init)
 export(flash_nullcheck)
-export(flash_remove_factors)
-export(flash_reorder_factors)
 export(flash_set_conv_crit)
-export(flash_set_factors_to_zero)
 export(flash_set_verbose)
 export(flash_verbose_elbo)
 export(flash_verbose_elbo_diff)
