update interface and docs for fixing/unfixing factors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,15 +21,16 @@ export(flash)
 export(flash.add.greedy)
 export(flash.backfit)
 export(flash.fit)
-export(flash.fix.factors)
 export(flash.init.factors)
 export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
 export(flash_conv_crit_max_chg_F)
 export(flash_conv_crit_max_chg_L)
+export(flash_factors_fix)
 export(flash_factors_remove)
 export(flash_factors_reorder)
 export(flash_factors_set_to_zero)
+export(flash_factors_unfix)
 export(flash_greedy_init_default)
 export(flash_greedy_init_irlba)
 export(flash_greedy_init_softImpute)
