update docs and interface for factor initialization and greedy algorithm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,19 +18,19 @@ export(ff.p2m)
 export(ff.pm)
 export(ff.tau)
 export(flash)
-export(flash.add.greedy)
 export(flash.backfit)
 export(flash.fit)
-export(flash.init.factors)
 export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
 export(flash_conv_crit_max_chg_F)
 export(flash_conv_crit_max_chg_L)
 export(flash_factors_fix)
+export(flash_factors_init)
 export(flash_factors_remove)
 export(flash_factors_reorder)
 export(flash_factors_set_to_zero)
 export(flash_factors_unfix)
+export(flash_greedy)
 export(flash_greedy_init_default)
 export(flash_greedy_init_irlba)
 export(flash_greedy_init_softImpute)
