update docs and interface for backfitting algo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,8 +18,8 @@ export(ff.p2m)
 export(ff.pm)
 export(ff.tau)
 export(flash)
-export(flash.backfit)
 export(flash.fit)
+export(flash_backfit)
 export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
 export(flash_conv_crit_max_chg_F)
