finish changing flash.fit to flash_fit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,7 +18,6 @@ export(ff.p2m)
 export(ff.pm)
 export(ff.tau)
 export(flash)
-export(flash.fit)
 export(flash_backfit)
 export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
@@ -30,6 +29,7 @@ export(flash_factors_remove)
 export(flash_factors_reorder)
 export(flash_factors_set_to_zero)
 export(flash_factors_unfix)
+export(flash_fit)
 export(flash_greedy)
 export(flash_greedy_init_default)
 export(flash_greedy_init_irlba)
