update interface and docs for flash_fit object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,14 +9,6 @@ S3method(print,flash)
 S3method(residuals,flash)
 S3method(residuals,flash_fit)
 export(as.ebnm.fn)
-export(ff.KL)
-export(ff.elbo)
-export(ff.est.tau)
-export(ff.fixed.tau)
-export(ff.g)
-export(ff.p2m)
-export(ff.pm)
-export(ff.tau)
 export(flash)
 export(flash_backfit)
 export(flash_conv_crit_elbo_diff)
@@ -30,6 +22,14 @@ export(flash_factors_reorder)
 export(flash_factors_set_to_zero)
 export(flash_factors_unfix)
 export(flash_fit)
+export(flash_fit_get_KL)
+export(flash_fit_get_elbo)
+export(flash_fit_get_est_tau)
+export(flash_fit_get_fixed_tau)
+export(flash_fit_get_g)
+export(flash_fit_get_p2m)
+export(flash_fit_get_pm)
+export(flash_fit_get_tau)
 export(flash_greedy)
 export(flash_greedy_init_default)
 export(flash_greedy_init_irlba)
