update docs and interface for EBNM helper function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,13 +8,13 @@ S3method(plot,flash)
 S3method(print,flash)
 S3method(residuals,flash)
 S3method(residuals,flash_fit)
-export(as.ebnm.fn)
 export(flash)
 export(flash_backfit)
 export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
 export(flash_conv_crit_max_chg_F)
 export(flash_conv_crit_max_chg_L)
+export(flash_ebnm)
 export(flash_factors_fix)
 export(flash_factors_init)
 export(flash_factors_remove)
