--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: flashier
 Type: Package
-Date: 2023-07-14
+Date: 2023-07-18
 Title: Empirical Bayes Matrix Factorization
-Version: 0.2.43
+Version: 0.2.44
 Author: Jason Willwerscheid
 Maintainer: Jason Willwerscheid <willwerscheid@github.com>
 Description: Methods for matrix factorization based on "Empirical
@@ -24,6 +24,7 @@ Imports:
     softImpute,
     irlba
 Suggests:
+    ashr,
     testthat,
     knitr,
     rmarkdown,
