docs for flash_set_ and flash_clear_timeout; minor edit to flash_set_verbose docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(residuals,flash)
 S3method(residuals,flash_fit)
 export(flash)
 export(flash_backfit)
+export(flash_clear_timeout)
 export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
 export(flash_conv_crit_max_chg_F)
@@ -37,6 +38,7 @@ export(flash_greedy_init_softImpute)
 export(flash_init)
 export(flash_nullcheck)
 export(flash_set_conv_crit)
+export(flash_set_timeout)
 export(flash_set_verbose)
 export(flash_verbose_elbo)
 export(flash_verbose_elbo_diff)
