--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ S3method(print,flash)
 S3method(residuals,flash)
 S3method(residuals,flash_fit)
 export(flash)
+export(flash_add_intercept)
 export(flash_backfit)
 export(flash_clear_timeout)
 export(flash_conv_crit_elbo_diff)
