--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: flashier
 Type: Package
-Date: 2023-07-22
+Date: 2023-07-25
 Title: Empirical Bayes Matrix Factorization
-Version: 0.2.48
+Version: 0.2.49
 Author: Jason Willwerscheid
 Maintainer: Jason Willwerscheid <willwerscheid@github.com>
 Description: Methods for matrix factorization based on "Empirical
@@ -25,6 +25,7 @@ Imports:
     irlba
 Suggests:
     ashr,
+    cowplot,
     testthat,
     knitr,
     rmarkdown,
