vignette improvements suggested by peter

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,17 +2,16 @@ Package: flashier
 Type: Package
 Date: 2023-09-11
 Title: Empirical Bayes Matrix Factorization
-Version: 0.2.52
+Version: 0.2.53
 Author: Jason Willwerscheid
 Maintainer: Jason Willwerscheid <willwerscheid@github.com>
 Description: Methods for matrix factorization based on "Empirical
     Bayes Matrix Factorization" (W. Wang & M. Stephens, 2021).
 Depends: 
     R (>= 3.4),
+    ebnm (>= 0.1-21),    
     magrittr,
-    ebnm (>= 0.1-21)
-Remotes: 
-    stephenslab/ebnm
+    ggplot2
 Imports:
     Matrix,
     parallel,
