--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: flashier
 Type: Package
-Date: 2023-10-13
+Date: 2023-10-16
 Title: Empirical Bayes Matrix Factorization
-Version: 1.0.5
+Version: 1.0.6
 Authors@R: c(person("Jason", "Willwerscheid", role = c("aut", "cre"),
                     email = "jwillwer@providence.edu"),
              person("Peter", "Carbonetto", role = "aut"),
@@ -12,8 +12,8 @@ Authors@R: c(person("Jason", "Willwerscheid", role = c("aut", "cre"),
              person("Gao", "Wang", role = "ctb"))
 URL: https://github.com/willwerscheid/flashier
 BugReports: https://github.com/willwerscheid/flashier/issues
-Description: Methods for matrix factorization based on "Empirical
-    Bayes Matrix Factorization" (W. Wang & M. Stephens, 2021).
+Description: Methods for matrix factorization based on Wang and Stephens (2021) 
+    <http://jmlr.org/papers/v22/20-589.html>.
 Depends: 
     R (>= 3.4),
     ebnm (>= 0.1-21),    
