first pass at flash_update_data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(flash_nullcheck)
 export(flash_set_conv_crit)
 export(flash_set_timeout)
 export(flash_set_verbose)
+export(flash_update_data)
 export(flash_verbose_elbo)
 export(flash_verbose_elbo_diff)
 export(flash_verbose_max_chg)
