should support low-rank matrices where matrices have class Matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,10 @@ export(flash_verbose_max_chg)
 export(flash_verbose_max_chg_F)
 export(flash_verbose_max_chg_L)
 export(ldf)
+importFrom(Matrix,colSums)
+importFrom(Matrix,crossprod)
+importFrom(Matrix,rowSums)
+importFrom(Matrix,t)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(ebnm,ebnm)
