Make calculation of Y2 faster when k >> n

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(Matrix,colSums)
 importFrom(Matrix,crossprod)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,t)
+importFrom(Matrix,tcrossprod)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(ebnm,ebnm)
