export sptensor methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,20 +3,24 @@
 S3method(as.fullrank,default)
 S3method(as.fullrank,lowrank)
 S3method(as.fullrank,lrps)
+S3method(as.fullrank,sptensor)
 S3method(fitted,flash)
 S3method(fitted,flash_fit)
 S3method(get.data.dimnames,default)
 S3method(get.data.dimnames,lowrank)
 S3method(get.data.dimnames,lrps)
+S3method(get.data.dimnames,sptensor)
 S3method(get.data.dims,default)
 S3method(get.data.dims,lowrank)
 S3method(get.data.dims,lrps)
+S3method(get.data.dims,sptensor)
 S3method(ldf,flash)
 S3method(ldf,flash_fit)
 S3method(nmode.prod.r1,default)
 S3method(nmode.prod.vec,default)
 S3method(nmode.prod.vec,lowrank)
 S3method(nmode.prod.vec,lrps)
+S3method(nmode.prod.vec,sptensor)
 S3method(plot,flash)
 S3method(premult.nmode.prod.r1,default)
 S3method(premult.nmode.prod.r1,lowrank)
@@ -27,6 +31,7 @@ S3method(residuals,flash_fit)
 S3method(sq.nmode.prod.r1,default)
 S3method(sq.nmode.prod.r1,lowrank)
 S3method(sq.nmode.prod.r1,lrps)
+S3method(sq.nmode.prod.r1,sptensor)
 export(as.fullrank)
 export(flash)
 export(flash_add_intercept)
