--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ S3method(plot,flash)
 S3method(premult.nmode.prod.r1,default)
 S3method(premult.nmode.prod.r1,lowrank)
 S3method(premult.nmode.prod.r1,lrps)
+S3method(premult.nmode.prod.r1,sptensor)
 S3method(print,flash)
 S3method(residuals,flash)
 S3method(residuals,flash_fit)
