--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(residuals,flash_fit)
 export(flash)
 export(flash_add_intercept)
 export(flash_backfit)
+export(flash_backfit_grouped_data)
 export(flash_clear_timeout)
 export(flash_conv_crit_elbo_diff)
 export(flash_conv_crit_max_chg)
@@ -37,7 +38,9 @@ export(flash_greedy_init_default)
 export(flash_greedy_init_irlba)
 export(flash_greedy_init_softImpute)
 export(flash_init)
+export(flash_init_cluster_for_grouped_data)
 export(flash_nullcheck)
+export(flash_recover_fl_object_from_cluster)
 export(flash_set_conv_crit)
 export(flash_set_timeout)
 export(flash_set_verbose)
