import snow and tictoc functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,12 @@ importFrom(magrittr,"%>%")
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
+importFrom(snow,checkForRemoteErrors)
+importFrom(snow,clusterEvalQ)
+importFrom(snow,clusterExport)
+importFrom(snow,makeCluster)
+importFrom(snow,recvResult)
+importFrom(snow,sendCall)
 importFrom(softImpute,softImpute)
 importFrom(stats,coef)
 importFrom(stats,density)
@@ -97,5 +103,7 @@ importFrom(stats,residuals)
 importFrom(stats,rnorm)
 importFrom(stringr,str_remove)
 importFrom(tibble,rownames_to_column)
+importFrom(tictoc,tic)
+importFrom(tictoc,toc)
 importFrom(tidyr,pivot_longer)
 importFrom(utils,modifyList)
