change parallel imports to snow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,15 +84,14 @@ importFrom(ggplot2,theme_minimal)
 importFrom(grDevices,devAskNewPage)
 importFrom(irlba,irlba)
 importFrom(magrittr,"%>%")
-importFrom(parallel,makeCluster)
-importFrom(parallel,parLapply)
-importFrom(parallel,stopCluster)
 importFrom(snow,checkForRemoteErrors)
 importFrom(snow,clusterEvalQ)
 importFrom(snow,clusterExport)
 importFrom(snow,makeCluster)
+importFrom(snow,parLapply)
 importFrom(snow,recvResult)
 importFrom(snow,sendCall)
+importFrom(snow,stopCluster)
 importFrom(softImpute,softImpute)
 importFrom(stats,coef)
 importFrom(stats,density)
