--- a/NAMESPACE
+++ b/NAMESPACE
@@ -92,6 +92,7 @@ importFrom(snow,parLapply)
 importFrom(snow,recvResult)
 importFrom(snow,sendCall)
 importFrom(snow,stopCluster)
+importFrom(softImpute,complete)
 importFrom(softImpute,softImpute)
 importFrom(stats,coef)
 importFrom(stats,density)
