export flash_impute_grouped_data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(flash_greedy)
 export(flash_greedy_init_default)
 export(flash_greedy_init_irlba)
 export(flash_greedy_init_softImpute)
+export(flash_impute_grouped_data)
 export(flash_init)
 export(flash_init_cluster_for_grouped_data)
 export(flash_nullcheck)
