--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
-pandoc: 3.1.1
+pandoc: 2.17.1.1
 pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
-  advanced: advanced.html
-  intro: intro.html
-last_built: 2023-10-16T16:35Z
+  advanced_flashier: advanced_flashier.html
+  flashier_closer_look: flashier_closer_look.html
+  flashier_intro: flashier_intro.html
+last_built: 2024-02-21T17:49Z
 
