major change to plot.flash method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,11 +53,11 @@ importFrom(Matrix,crossprod)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,t)
 importFrom(Matrix,tcrossprod)
-importFrom(dplyr,left_join)
-importFrom(dplyr,mutate)
+importFrom(cowplot,theme_cowplot)
 importFrom(ebnm,ebnm)
 importFrom(ebnm,ebnm_group)
 importFrom(ebnm,ebnm_point_normal)
+importFrom(fastTopics,structure_plot)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,after_stat)
 importFrom(ggplot2,element_blank)
@@ -66,19 +66,21 @@ importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_histogram)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_tile)
 importFrom(ggplot2,geom_vline)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,guides)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_brewer)
-importFrom(ggplot2,scale_color_manual)
+importFrom(ggplot2,scale_color_identity)
 importFrom(ggplot2,scale_fill_brewer)
-importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_fill_gradient2)
+importFrom(ggplot2,scale_fill_identity)
 importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
-importFrom(grDevices,devAskNewPage)
 importFrom(irlba,irlba)
 importFrom(magrittr,"%>%")
 importFrom(parallel,makeCluster)
@@ -92,7 +94,4 @@ importFrom(stats,optimize)
 importFrom(stats,pnorm)
 importFrom(stats,residuals)
 importFrom(stats,rnorm)
-importFrom(stringr,str_remove)
-importFrom(tibble,rownames_to_column)
-importFrom(tidyr,pivot_longer)
 importFrom(utils,modifyList)
