updates to plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,7 +53,14 @@ importFrom(Matrix,crossprod)
 importFrom(Matrix,rowSums)
 importFrom(Matrix,t)
 importFrom(Matrix,tcrossprod)
+importFrom(Polychrome,kelly.colors)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(cowplot,theme_cowplot)
+importFrom(dplyr,arrange)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
+importFrom(dplyr,summarize)
 importFrom(ebnm,ebnm)
 importFrom(ebnm,ebnm_group)
 importFrom(ebnm,ebnm_point_normal)
@@ -80,7 +87,7 @@ importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,scale_y_log10)
 importFrom(ggplot2,theme)
-importFrom(ggplot2,theme_minimal)
+importFrom(ggrepel,geom_text_repel)
 importFrom(irlba,irlba)
 importFrom(magrittr,"%>%")
 importFrom(parallel,makeCluster)
