--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(fastTopics,structure_plot)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,after_stat)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_col)
 importFrom(ggplot2,geom_histogram)
