export flash_plot_xxx functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,12 @@ export(flash_greedy_init_irlba)
 export(flash_greedy_init_softImpute)
 export(flash_init)
 export(flash_nullcheck)
+export(flash_plot_bar)
+export(flash_plot_heatmap)
+export(flash_plot_histogram)
+export(flash_plot_scatter)
+export(flash_plot_scree)
+export(flash_plot_structure)
 export(flash_set_conv_crit)
 export(flash_set_timeout)
 export(flash_set_verbose)
