use rlang::.data to deal with R CMD "no visible binding" checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -120,6 +120,7 @@ importFrom(lifecycle,deprecate_warn)
 importFrom(parallel,makeCluster)
 importFrom(parallel,parLapply)
 importFrom(parallel,stopCluster)
+importFrom(rlang,.data)
 importFrom(softImpute,softImpute)
 importFrom(stats,coef)
 importFrom(stats,density)
