--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: flashier
 Type: Package
 Date: 2024-05-06
 Title: Empirical Bayes Matrix Factorization
-Version: 1.0.50
+Version: 1.0.51
 Authors@R: c(person("Jason", "Willwerscheid", role = c("aut", "cre"),
                     email = "jwillwer@providence.edu"),
              person("Peter", "Carbonetto", role = "aut"),
@@ -30,7 +30,8 @@ Imports:
     cowplot,
     Polychrome,
     RColorBrewer,
-    lifecycle
+    lifecycle,
+    rlang
 Suggests:
     ashr,
     testthat,
