Add sumsq method for faster calculation of Y2 in flash_init()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,8 @@ S3method(residuals,flash_fit)
 S3method(sq.nmode.prod.r1,default)
 S3method(sq.nmode.prod.r1,lowrank)
 S3method(sq.nmode.prod.r1,lrps)
+S3method(sumsq,default)
+S3method(sumsq,lowrank)
 export(flash)
 export(flash_add_intercept)
 export(flash_backfit)
