Added fastTopics to Remotes in DESCRIPTION.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: flashier
 Type: Package
-Date: 2025-01-27
+Date: 2025-11-13
 Title: Empirical Bayes Matrix Factorization
-Version: 1.0.56
+Version: 1.0.57
 Authors@R: c(person("Jason", "Willwerscheid", role = c("aut", "cre"),
                     email = "jwillwer@providence.edu"),
              person("Peter", "Carbonetto", role = "aut"),
@@ -41,7 +41,8 @@ Suggests:
     rsvd,
     Rtsne
 Remotes: 
-    stephenslab/ebnm
+    stephenslab/ebnm,
+    stephenslab/fastTopics
 License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 LazyData: true
